cabal-version: 3.0
name: dear-implot
version: 1.0.0
build-type: Simple

library
  exposed-modules:
    DearImGui.Plot
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  cxx-sources:
    implot/implot.cpp
    implot/implot_items.cpp
  cxx-options:
    -std=c++11
  extra-libraries:
    stdc++
  include-dirs:
    implot
    imgui
  build-depends: base
               , StateVar
               , containers
               , dear-imgui
               , inline-c
               , inline-c-cpp
               , managed

executable test
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base
               , binary
               , bytestring
               , dear-imgui
               , dear-implot
               , gl
               , managed
               , pipes
               , pipes-safe
               , sdl2
               , pipes-pulse-simple
  ghc-options: -Wall
